# synth8z.github.io

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  index.htm
.github/workflows/: pages.yml
src/: lib.rs
static/: index.html  init.js  robots.txt  styles.css
static/.well-known/: ai.txt
