[package]
name = "synth8z_wasm"
version = "0.1.0"
edition = "2024"
description = "synth8z - Protocols for the post-human economy"
repository = "https://github.com/synth8z/synth8z.github.io"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "Window"
] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
futures = "0.3"
